--- a/res/xml/powermenu.xml
+++ b/res/xml/powermenu.xml
@@ -27,6 +27,12 @@
             android:title="@string/powermenu_reboot"
             android:defaultValue="true" />
 
+         <com.android.settings.tesla.SystemSettingSwitchPreference
+            android:key="power_menu_lockscreen"
+            android:title="@string/powermenu_lockscreen_title"
+            android:summary="@string/powermenu_lockscreen_summary"
+            android:defaultValue="true" />
+
          <ListPreference
             android:key="advanced_reboot"
             android:title="@string/advanced_reboot_title"
