--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -92,11 +92,22 @@
                 settings:keywords="@string/keywords_display_cast_screen"
                 android:fragment="com.android.settings.wfd.WifiDisplaySettings" />
 
+        <PreferenceCategory
+        android:key="wakeup"
+        android:title="@string/wakeup_section_header" >
+
+        <SwitchPreference
+                android:key="volume_rocker_wake"
+                android:summary="@string/volume_rocker_wake_summary"
+                android:title="@string/volume_rocker_wake_title" />
+
         <SwitchPreference
                 android:key="wake_when_plugged_or_unplugged"
                 android:title="@string/wake_when_plugged_or_unplugged_title"
                 android:summary="@string/wake_when_plugged_or_unplugged_summary"
                 android:defaultValue="false" />
+
+        </PreferenceCategory>
 
     <PreferenceCategory
       android:key="category_doze_options"
