--- a/res/xml/lockscreen_settings.xml
+++ b/res/xml/lockscreen_settings.xml
@@ -3,4 +3,15 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+        <com.android.settings.tesla.SystemSettingSwitchPreference
+            android:key="double_tap_sleep_lock_screen"
+            android:title="@string/double_tap_to_sleep_lockscreen_title"
+            android:summary="@string/double_tap_to_sleep_lockscreen_summary"
+            android:defaultValue="false" />
+
+        <PreferenceScreen
+            android:key="lockscreen_wallpaper_changer"
+            android:title="@string/lockscreen_wallpaper_title"
+            android:fragment="com.android.settings.tesla.fragments.LockscreenSettings" />
+
 </PreferenceScreen>
