--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -64,6 +64,13 @@
             android:summary="@string/status_bar_custom_header_summary"
             android:defaultValue="false"/>
 
+         <com.android.settings.tesla.SystemSettingSwitchPreference
+            android:key="status_bar_custom_header_default"
+            android:title="@string/status_bar_custom_header_default_title"
+            android:summary="@string/status_bar_custom_header_default_summary"
+            android:dependency="status_bar_custom_header"
+            android:defaultValue="false"/>
+
           <Preference
             android:key="tesla_logo"
             android:fragment="com.android.settings.tesla.TeslaLogo"
