--- a/res/xml/tesla_interface_settings.xml
+++ b/res/xml/tesla_interface_settings.xml
@@ -36,6 +36,7 @@
 
     <PreferenceScreen
         android:key="lock_screen_general_category"
+        android:fragment="com.android.settings.tesla.LockScreenSettings"
         android:title="@string/lockscreen_title" />
 
     <Preference
